Fixes color theme not showing when running Rails with assets digest enabled

--- a/app/assets/stylesheets/graphiql/rails/themes/officespace.css
+++ b/app/assets/stylesheets/graphiql/rails/themes/officespace.css
@@ -4,33 +4,33 @@
   --officespace-orange: #F15829;
 }
 
-button.graphiql-execute-button {
+.officespace button.graphiql-execute-button {
   background-color: var(--officespace-blue);
 }
-button.graphiql-execute-button:focus {
+.officespace button.graphiql-execute-button:focus {
   outline: var(--officespace-blue-dark);
 }
 
-button.graphiql-execute-button:hover {
+.officespace button.graphiql-execute-button:hover {
   background-color: var(--officespace-blue-dark);
 }
 
-.graphiql-doc-explorer-root-type {
+.officespace .graphiql-doc-explorer-root-type {
   color: var(--officespace-blue-dark);
 }
 
-a.graphiql-doc-explorer-type-name {
+.officespace a.graphiql-doc-explorer-type-name {
   color: var(--officespace-orange);
 }
 
-.cm-s-graphiql .cm-keyword {
+.officespace .cm-s-graphiql .cm-keyword {
   color: var(--officespace-orange);
 }
 
-.cm-s-graphiql .cm-def {
+.officespace .cm-s-graphiql .cm-def {
   color: var(--officespace-blue-dark);
 }
 
-.graphiql-dialog .graphiql-warning-text {
+.officespace .graphiql-dialog .graphiql-warning-text {
   color: #F15829;
 }
